@@ -15,3 +15,15 @@ ROW FORMAT DELIMITED FIELDS TERMINATED BY '\t'
 STORED AS TEXTFILE;
 DESCRIBE table3;
 DESCRIBE EXTENDED table3;
+
+CREATE TABLE table4 (a STRING, b STRING)
+ROW FORMAT DELIMITED FIELDS TERMINATED BY '\t'
+STORED AS SEQUENCEFILE;
+DESCRIBE table4;
+DESCRIBE EXTENDED table4;
+
+CREATE TABLE table5 (a STRING, b STRING)
+ROW FORMAT DELIMITED FIELDS TERMINATED BY '\t'
+STORED AS RCFILE;
+DESCRIBE table5;
+DESCRIBE EXTENDED table5;
