@@ -315,6 +315,9 @@ Trunk -  Unreleased
     HIVE-1670 MapJoin throws an error if no column from the mapjoined table is selected
     (Ning Zhang via namit)
 
+    HIVE-1673 Create table bug causes the row format property lost when serde is specified
+    (He Yongqiang via namit)
+
   TESTS
 
     HIVE-1464. improve  test query performance
